--- a/device_packages/pubspec.yaml
+++ b/device_packages/pubspec.yaml
@@ -1,13 +1,7 @@
 name: device_packages
 description: Flutter plugin to get the list of installed applications.
 version: 0.1.0
-homepage: https://github.com/alexrintt/device-packages
-repository: https://github.com/alexrintt/device-packages
-issue_tracker: https://github.com/alexrintt/device-packages
-documentation: https://github.com/alexrintt/device-packages
-funding:
-  - https://www.buymeacoffee.com/alexrintt
-  - https://www.github.com/sponsors/alexrintt
+
 publish_to: none
 
 environment:
@@ -16,20 +10,10 @@ environment:
 
 dependencies:
   # Development dependencies:
-  # device_packages_android:
-  #   path: ../device_packages_android
-  # device_packages_platform_interface:
-  #   path: ../device_packages_platform_interface
-
-  # Prod dependencies, replace with pub namespace when published:
   device_packages_android:
-    git:
-      url: https://github.com/alexrintt/device-packages
-      path: device_packages_android
+    path: ../device_packages_android
   device_packages_platform_interface:
-    git:
-      url: https://github.com/alexrintt/device-packages
-      path: device_packages_platform_interface
+    path: ../device_packages_platform_interface
 
   flutter:
     sdk: flutter
